--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^6.4.8",
+    "@mui/system": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/postcss": "^4.0.14",
     "@tensorflow/tfjs": "^4.22.0",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0"
@@ -27,8 +33,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
     "vite": "^6.2.0"
   }
 }
